--- a/content/projects/project-template.html
+++ b/content/projects/project-template.html
@@ -6,7 +6,7 @@
   <title>Project | Roie Shalom</title>
   <link rel="icon" type="image/x-icon" href="/content/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="../../styles.css">
   <script src="https://kit.fontawesome.com/3ff078e01b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -32,7 +32,7 @@
         </div>
       `;
     } else {
-      fetch('/data/projects.json')
+      fetch('../../data/projects.json')
         .then(res => res.json())
         .then(projects => {
           const project = projects.find(p => p.id === projectId);
@@ -80,6 +80,6 @@
     }
   </script>
   
-  <script src="/theme.js"></script>
+  <script src="../../theme.js"></script>
 </body>
 </html>
